syntax = "proto3";

// protoc -I=./src/main/proto --csharp_out=C:/Development/workspace/unity3d/Cosmic-Scavengers-Unity-Client/Assets/Scripts/CosmicScavengers/Protobuf/Entitites/ entities.proto

package cosmic_scavengers.entities;

// Options for Java and C# generation
option java_package = "com.cosmicscavengers.networking.protobuf.entities";
option java_multiple_files = true;
option csharp_namespace = "CosmicScavengers.Networking.Protobuf.Entities";

import "google/protobuf/timestamp.proto";
import "traits.proto"; // This allows us to use types from cosmic_scavengers.traits

// ==============================================================
// 1. LOOKUPS & TEMPLATES
// ==============================================================

message BlueprintCategoryProto {
    string id = 1; 
}

message EntityStatusProto {
    string id = 1;
    bool is_physical = 2;    
}

message EntityBlueprintProto {
    string id = 1;
    string category_id = 2;
    int32 base_health = 3;
    bool is_static_default = 4;
    
    // We store the raw JSON from YAML here for the client to parse static data
    string behavior_configs = 5; 
}

// ==============================================================
// 2. PLAYER ENTITIES (Live Instances)
// ==============================================================

message PlayerEntityProto {
    // ID BLOCK
    int64 id = 1;
    int64 player_id = 2;
    int64 world_id = 3;
    int64 sector_id = 4;
    string blueprint_id = 5; 

    // IDENTITY & STATUS
    string status_id = 6;    
    string entity_name = 7;  
    bool is_static = 8;      

    // SPATIAL DATA (Deterministic scaled longs)
    sfixed64 pos_x = 9;
    sfixed64 pos_y = 10;
    sfixed64 pos_z = 11;
    float rotation = 12; 

    // COMPUTED SPATIAL
    int32 chunk_x = 13;
    int32 chunk_y = 14;

    // LIVE STATS
    int32 current_health = 15;    
    
    // STRUCTURED TRAITS DATA
    // We use the types defined in traits.proto here
    repeated cosmic_scavengers.traits.TraitInstanceProto traits = 16;

    // SYSTEM METADATA
    google.protobuf.Timestamp created_at = 17;
    google.protobuf.Timestamp updated_at = 18;
}

// ==============================================================
// 3. NETWORK RESPONSES
// ==============================================================

message EntityManifestResponse {
    repeated BlueprintCategoryProto categories = 1;
    repeated EntityStatusProto statuses = 2;
    repeated EntityBlueprintProto blueprints = 3;
}

message EntitySyncResponse {
    int64 world_id = 1;
    int64 sector_id = 2;
    repeated PlayerEntityProto entities = 3;
}